--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Packages</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="packages.html">Packages</a></li>
           <li><a href="http://holumbus.fh-wedel.de/hayoo/hayoo.html">Hayoo!</a></li>
           <li><a href="#">My Account</a></li>
         </ul>
