Remove DB letters from Hackage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>hackage DB</title>
+    <title>Hackage</title>
 
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="./custom.css" rel="stylesheet">
@@ -31,14 +31,14 @@
           <li><a href="http://holumbus.fh-wedel.de/hayoo/hayoo.html">Hayoo!</a></li>
           <li><a href="#">My Account</a></li>
         </ul>
-        <h3 class="muted"><img src="logo.png" />HackageDB</h3>
+        <h3 class="muted"><img src="logo.png" />Hackage</h3>
       </div>
 
       <hr>
 
       <div class="jumbotron">
-        <h1><img src="logo-big.png" />HackageDB</h1>
-        <p class="lead">HackageDB (or just Hackage) is a collection of releases of Haskell packages. Each package is in the Cabal format, a standard way of packaging Haskell source code that makes it easy to build and install.</p>
+        <h1><img src="logo-big.png" />Hackage</h1>
+        <p class="lead">Hackage is a collection of releases of Haskell packages. Each package is in the Cabal format, a standard way of packaging Haskell source code that makes it easy to build and install.</p>
       </div>
 
       <hr>
