--- a/packages.html
+++ b/packages.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>hackage DB</title>
+    <title>Hackage</title>
 
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="./custom.css" rel="stylesheet">
@@ -31,7 +31,7 @@
           <li><a href="http://holumbus.fh-wedel.de/hayoo/hayoo.html">Hayoo!</a></li>
           <li><a href="#">My Account</a></li>
         </ul>
-        <h3 class=""><img src="logo.png" />HackageDB</h3>
+        <h3 class=""><img src="logo.png" />Hackage</h3>
       </div>
 
       <hr>
@@ -42,7 +42,7 @@
 	><input type="hidden" name="hl" value="en"
 	   /><input type="hidden" name="as_sitesearch" value="hackage.haskell.org/package"
 	   /><input id="filtertxt" type="text" size="30" name="as_q" value=""  placeholder="Search packages or filter categories…"
-	   /><input type="submit" class="btn btn-primary" value="Search package pages"
+	   /><input type="submit" class="btn btn-primary" value="Search packages"
 	   />
       <a id="filteraction" href="#" class="btn btn-success">Filter</a>
    </form
